--- a/app/templates/admin/viewitem.html
+++ b/app/templates/admin/viewitem.html
@@ -76,7 +76,7 @@
               </tr>
             </thead>
             <tbody>
-              {% for item in items %}
+              {% for item in item %}
               <tr>
                 <th scope="row">{{ item.idprof }}</th>
                 <td>{{ item.author.first_name }}</td>
