--- a/app/templates/admin/viewwork.html
+++ b/app/templates/admin/viewwork.html
@@ -77,7 +77,7 @@
             <tbody>
               {% for item in worker %}
               <tr>
-                <th scope="row">{{ item.idwork }}</th>
+                <th scope="row">{{ item.idworker }}</th>
                 <td>{{ item.author.first_name }}</td>
                 <td>{{ item.no_telp_pemesan }}</td>
                 <td>{{ item.tanggal_ketemu }}</td>
