--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="google-site-verification" content="mM-PN9DcDcxXGzPosaxw6GH-YowPt0YD_JATwm06Wns" />
 
   <title>HomeIt</title>
   <meta content="" name="description">
